--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Customecss/Style.css">
+    <script src="https://kit.fontawesome.com/750799501c.js" crossorigin="anonymous"></script>
     <title>Project HTML Cutome CSS</title>
 </head>
 
@@ -22,7 +23,7 @@
                     believe
                 </h1>
                 <br>
-    
+
                 <p id="hed-pra">Lorem ipsum dolor, sit amet consectetur adipisicing elit <br>
                     Quidem accusamus adipisci reprehenderit delectus consequatur <br>
                     autem porro suscipit non molestiae excepturi!
@@ -31,7 +32,7 @@
                 <button id="hed-btn">
                     Contact Us
                 </button>
-                
+
             </div>
         </div>
     </Header>
@@ -39,6 +40,88 @@
     <!---------------
          Header-Section End 
         ----------------->
+
+
+    <main>
+        <aside>
+            <!-------------------
+                 previous-year-state 
+                ------------------------->
+            <div class="previous-year">
+
+                <div>
+                    <img src="/images/person.png" alt="">
+                </div>
+
+                <div>
+                    <h1>My failures of <br>
+                        previous year</h1>
+                    <p>
+                        Contrary to popular belief, Lorem Ipsum is not <br>
+                        simply random text. It has roots in a piece of <br>
+                        classical Latin literature from 45 BC, <br> making it over
+                        2000 years old. Richard McClintock.
+                    </p>
+                    <ul style="outline: none;" id="unol">
+                        <li>Contrary to popular belief, is not simply.
+                        </li>
+                        <i class="fa-solid fa-check fa-beat"></i>
+                        <li>Contrary to popular belief.
+                        </li>
+                        <li>Contrary to popular , is not simply.
+                        </li>
+                        <li>Contrary to popular belief, is not simply.
+                        </li>
+                        <li>Contrary to popular simply.
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <!-------------------
+                 previous-year-end 
+                ------------------------->
+
+            <!-------------
+                 MyPlans-State 
+                ---------------->
+
+            <div style="margin: 75px 0px; text-align: center; font-size: 45px;font-weight: bolder;">
+                <h1 style="color: darkslategray;">My Plans</h1>
+            </div>
+
+
+            <div class="myPlans-hed">
+                <div>
+                    <img src="/images/icons/web.png" alt="">
+                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;">Web Development</h1>
+                    <p style="color:gray;">I want to start</p>
+                </div>
+
+
+                <div>
+                    <img src="/images/icons/smoke.png" alt="">
+                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;"> Smoking Habit</h1>
+                    <p style="color:gray;">I want to start</p>
+                </div>
+                <div>
+                    <img src="/images/icons/js.png" alt="">
+                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;">Javascript</h1>
+                    <p style="color:gray;">I want to start</p>
+                </div>
+                <div>
+                    <img src="/images/icons/ecom.png" alt="">
+                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;">ecommercessss </h1>
+                    <p style="color:gray;">I want to start</p>
+                </div>
+            </div>
+
+            <!------------------------ 
+                MyPlans-end -
+            -------------------------------->
+        </aside>
+    </main>
 
 </body>
 
