--- a/Index.html
+++ b/Index.html
@@ -54,25 +54,26 @@
                 </div>
 
                 <div>
-                    <h1>My failures of <br>
+                    <h1 style="font-size: 40px; font-weight: bold;">My failures of <br>
                         previous year</h1>
-                    <p>
+                    <p style="margin: 10px 0px; color: gray;">
                         Contrary to popular belief, Lorem Ipsum is not <br>
                         simply random text. It has roots in a piece of <br>
                         classical Latin literature from 45 BC, <br> making it over
                         2000 years old. Richard McClintock.
                     </p>
-                    <ul style="outline: none;" id="unol">
-                        <li>Contrary to popular belief, is not simply.
+                    <ul style="outline: none; color: grey;" id="unol">
+                        <li>
+                            <span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief, is not simply.
                         </li>
-                        <i class="fa-solid fa-check fa-beat"></i>
-                        <li>Contrary to popular belief.
+                       
+                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief.
                         </li>
-                        <li>Contrary to popular , is not simply.
+                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span>Contrary to popular , is not simply.
                         </li>
-                        <li>Contrary to popular belief, is not simply.
+                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span>Contrary to popular belief, is not simply.
                         </li>
-                        <li>Contrary to popular simply.
+                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span>Contrary to popular simply.
                         </li>
                     </ul>
                 </div>
