commit img gardian

--- a/Index.html
+++ b/Index.html
@@ -64,16 +64,23 @@
                     </p>
                     <ul style="outline: none; color: grey;" id="unol">
                         <li>
-                            <span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief, is not simply.
+                            <span> <i style="color: aqua; padding: 0px 8px;"
+                                    class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief, is not
+                            simply.
                         </li>
-                       
-                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief.
+
+                        <li><span> <i style="color: aqua; padding: 0px 8px;"
+                                    class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief.
                         </li>
-                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span>Contrary to popular , is not simply.
+                        <li><span> <i style="color: aqua; padding: 0px 8px;"
+                                    class="fa-solid fa-check fa-beat"></i></span>Contrary to popular , is not simply.
                         </li>
-                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span>Contrary to popular belief, is not simply.
+                        <li><span> <i style="color: aqua; padding: 0px 8px;"
+                                    class="fa-solid fa-check fa-beat"></i></span>Contrary to popular belief, is not
+                            simply.
                         </li>
-                        <li><span> <i style="color: aqua; padding: 0px 8px;" class="fa-solid fa-check fa-beat"></i></span>Contrary to popular simply.
+                        <li><span> <i style="color: aqua; padding: 0px 8px;"
+                                    class="fa-solid fa-check fa-beat"></i></span>Contrary to popular simply.
                         </li>
                     </ul>
                 </div>
@@ -122,6 +129,14 @@
                 MyPlans-end -
             -------------------------------->
         </aside>
+        <div>
+            <div class="gardianPic_body">
+                <div id="size-img-text">
+                    <h1 style="color:wheat;font-weight: 500;">Awlays keep a <br> positive mindset</h1>
+                    <button class="img-body-btn" type="button" >Call Now</button>
+                </div>
+            </div>
+        </div>
     </main>
 
 </body>
