--- a/Index.html
+++ b/Index.html
@@ -133,11 +133,46 @@
             <div class="gardianPic_body">
                 <div id="size-img-text">
                     <h1 style="color:wheat;font-weight: 500;">Awlays keep a <br> positive mindset</h1>
-                    <button class="img-body-btn" type="button" >Call Now</button>
+                    <button class="img-body-btn" type="button">Call Now</button>
                 </div>
             </div>
         </div>
     </main>
+    <!----------------------
+         Footer-state 
+        ---------------------------->
+    <Footer style="background-color: black; height: 500px;">
+        <div class="footer-mainDev">
+            <div>
+                <div style="color: wheat;">
+                    <h1>Future</h1>
+                    <h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt rem placeat <br>
+                        dolor quod a eveniet in, asperiores suscipit consequuntur Lorem ipsum dolor sit amet consectetur
+                        <br> adipisicing elit. Doloremque, mollitia temporibus modi <br> cumque enim culpa numquam
+                        voluptate consectetur placeat veritatis!
+                    </h5> <br>
+                    <p>Email : info@gmail.com</p> <br>
+                    <p>Phone : 01500 00 00 00</p> <br>
+                    <div style="display: flex; align-items: center;">
+                        <img style="margin: 12px;" src="/images/icons/youtube.png" alt="">
+                        <img style="margin: 12px;" src="/images/icons/twitter.png" alt="">
+                        <img style="margin: 12px;" src="/images/icons/fb.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h1 style="color: wheat; font-weight: 600;">Subscribe</h1>
+                <input placeholder="Enter your email" type="text" name="text" id="text" style="margin: 22px 0px;padding: 10px 22px; border-radius: 5px; border: none;" >  <br>
+                <button id="footer-btn">
+                    Contact Us
+                </button>
+            </div>
+        </div>
+    </Footer>
+    <!----------------------
+         Footer-End 
+        ---------------------------->
 
 </body>
 
