--- a/Index.html
+++ b/Index.html
@@ -1,179 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Customecss/Style.css">
-    <script src="https://kit.fontawesome.com/750799501c.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Customecss/Style.css" />
+    <script
+      src="https://kit.fontawesome.com/750799501c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Project HTML Cutome CSS</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!---------------
          Header-Section State 
         ----------------->
-    <Header>
-        <div class="hed-alaing">
-            <div class="header-Bac">
-                <h1 class="header-text">
-                    All Thinks Are <br>
-                    Possible If You <br>
-                    believe
-                </h1>
-                <br>
+    <header class="header-Bac">
+      <div class="hed-alaing">
+        <div>
+          <h1 class="header-text">All Thinks Are Possible If You believe</h1>
 
-                <p id="hed-pra">Lorem ipsum dolor, sit amet consectetur adipisicing elit <br>
-                    Quidem accusamus adipisci reprehenderit delectus consequatur <br>
-                    autem porro suscipit non molestiae excepturi!
-                </p>
-                <br>
-                <button id="hed-btn">
-                    Contact Us
-                </button>
-
-            </div>
+          <p id="hed-pra">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit <br />
+            Quidem accusamus adipisci reprehenderit delectus consequatur autem
+            porro suscipit non molestiae excepturi
+          </p>
+          <div class="ghartera">
+            <button id="hed-btn">Contact Us</button>
+          </div>
         </div>
-    </Header>
+      </div>
+
+
+  
+
+     
+    </header>
 
     <!---------------
          Header-Section End 
         ----------------->
 
-
     <main>
-        <aside>
-            <!-------------------
+      <aside>
+        <!-- -----------------
                  previous-year-state 
-                ------------------------->
-            <div class="previous-year">
+                ----------------------- -->
+        <div class="previous-year">
+          <div>
+            <img style="width: 100%" src="/images/person.png" alt="" />
+          </div>
 
-                <div>
-                    <img src="/images/person.png" alt="">
-                </div>
+          <div>
+            <h1 style="font-size: 40px; font-weight: bold">
+              My failures of <br />
+              previous year
+            </h1>
+            <p style="margin: 10px 0px; color: gray">
+              Contrary to popular belief, Lorem Ipsum is not <br />
+              simply random text. It has roots in a piece of <br />
+              classical Latin literature from 45 BC, <br />
+              making it over 2000 years old. Richard McClintock.
+            </p>
+            <ul style="outline: none; color: grey" id="unol">
+              <li>
+                <span>
+                  <i
+                    style="color: aqua; padding: 0px 8px"
+                    class="fa-solid fa-check fa-beat"
+                  ></i
+                ></span>
+                Contrary to popular belief, is not simply.
+              </li>
 
-                <div>
-                    <h1 style="font-size: 40px; font-weight: bold;">My failures of <br>
-                        previous year</h1>
-                    <p style="margin: 10px 0px; color: gray;">
-                        Contrary to popular belief, Lorem Ipsum is not <br>
-                        simply random text. It has roots in a piece of <br>
-                        classical Latin literature from 45 BC, <br> making it over
-                        2000 years old. Richard McClintock.
-                    </p>
-                    <ul style="outline: none; color: grey;" id="unol">
-                        <li>
-                            <span> <i style="color: aqua; padding: 0px 8px;"
-                                    class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief, is not
-                            simply.
-                        </li>
+              <li>
+                <span>
+                  <i
+                    style="color: aqua; padding: 0px 8px"
+                    class="fa-solid fa-check fa-beat"
+                  ></i
+                ></span>
+                Contrary to popular belief.
+              </li>
+              <li>
+                <span>
+                  <i
+                    style="color: aqua; padding: 0px 8px"
+                    class="fa-solid fa-check fa-beat"
+                  ></i></span
+                >Contrary to popular , is not simply.
+              </li>
+              <li>
+                <span>
+                  <i
+                    style="color: aqua; padding: 0px 8px"
+                    class="fa-solid fa-check fa-beat"
+                  ></i></span
+                >Contrary to popular belief, is not simply.
+              </li>
+              <li>
+                <span>
+                  <i
+                    style="color: aqua; padding: 0px 8px"
+                    class="fa-solid fa-check fa-beat"
+                  ></i></span
+                >Contrary to popular simply.
+              </li>
+            </ul>
+          </div>
+        </div>
 
-                        <li><span> <i style="color: aqua; padding: 0px 8px;"
-                                    class="fa-solid fa-check fa-beat"></i></span> Contrary to popular belief.
-                        </li>
-                        <li><span> <i style="color: aqua; padding: 0px 8px;"
-                                    class="fa-solid fa-check fa-beat"></i></span>Contrary to popular , is not simply.
-                        </li>
-                        <li><span> <i style="color: aqua; padding: 0px 8px;"
-                                    class="fa-solid fa-check fa-beat"></i></span>Contrary to popular belief, is not
-                            simply.
-                        </li>
-                        <li><span> <i style="color: aqua; padding: 0px 8px;"
-                                    class="fa-solid fa-check fa-beat"></i></span>Contrary to popular simply.
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-
-            <!-------------------
+        <!-- -----------------
                  previous-year-end 
-                ------------------------->
+                ----------------------- -->
 
-            <!-------------
+        <!-- -----------
                  MyPlans-State 
-                ---------------->
+                -------------- -->
 
-            <div style="margin: 75px 0px; text-align: center; font-size: 45px;font-weight: bolder;">
-                <h1 style="color: darkslategray;">My Plans</h1>
-            </div>
+        <div
+          style="
+            margin: 75px 0px;
+            text-align: center;
+            font-size: 45px;
+            font-weight: bolder;
+          "
+        >
+          <h1 style="color: darkslategray">My Plans</h1>
+        </div>
 
+        <div class="myPlans-hed">
+          <div>
+            <img src="/images/icons/web.png" alt="" />
+            <h1 style="font-size: 30px; font-weight: bolder; margin: 4px 0px">
+              Web Development
+            </h1>
+            <p style="color: gray">I want to start</p>
+          </div>
 
-            <div class="myPlans-hed">
-                <div>
-                    <img src="/images/icons/web.png" alt="">
-                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;">Web Development</h1>
-                    <p style="color:gray;">I want to start</p>
-                </div>
+          <div>
+            <img src="/images/icons/smoke.png" alt="" />
+            <h1 style="font-size: 30px; font-weight: bolder; margin: 4px 0px">
+              Smoking Habit
+            </h1>
+            <p style="color: gray">I want to start</p>
+          </div>
+          <div>
+            <img src="/images/icons/js.png" alt="" />
+            <h1 style="font-size: 30px; font-weight: bolder; margin: 4px 0px">
+              Javascript
+            </h1>
+            <p style="color: gray">I want to start</p>
+          </div>
+          <div>
+            <img src="/images/icons/ecom.png" alt="" />
+            <h1 style="font-size: 30px; font-weight: bolder; margin: 4px 0px">
+              ecommercessss
+            </h1>
+            <p style="color: gray">I want to start</p>
+          </div>
+        </div>
 
-
-                <div>
-                    <img src="/images/icons/smoke.png" alt="">
-                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;"> Smoking Habit</h1>
-                    <p style="color:gray;">I want to start</p>
-                </div>
-                <div>
-                    <img src="/images/icons/js.png" alt="">
-                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;">Javascript</h1>
-                    <p style="color:gray;">I want to start</p>
-                </div>
-                <div>
-                    <img src="/images/icons/ecom.png" alt="">
-                    <h1 style="font-size: 30px; font-weight: bolder;margin: 4px 0px;">ecommercessss </h1>
-                    <p style="color:gray;">I want to start</p>
-                </div>
-            </div>
-
-            <!------------------------ 
+        <!-- ---------------------- 
                 MyPlans-end -
-            -------------------------------->
-        </aside>
-        <div>
-            <div class="gardianPic_body">
-                <div id="size-img-text">
-                    <h1 style="color:wheat;font-weight: 500;">Awlays keep a <br> positive mindset</h1>
-                    <button class="img-body-btn" type="button">Call Now</button>
-                </div>
-            </div>
+            ------------------------------ -->
+      </aside>
+      <div>
+        <div class="gardianPic_body">
+          <div id="size-img-text">
+            <h1 class="btn-positive" style="color: wheat; font-weight: 500">
+              Awlays keep a <br />
+              positive mindset
+            </h1>
+            <button class="img-body-btn" type="button">Call Now</button>
+          </div>
         </div>
+      </div>
     </main>
-    <!----------------------
+
+    <!-- --------------------
          Footer-state 
-        ---------------------------->
-    <Footer style="background-color: black; height: 500px;">
-        <div class="footer-mainDev">
-            <div>
-                <div style="color: wheat;">
-                    <h1>Future</h1>
-                    <h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique nesciunt rem placeat <br>
-                        dolor quod a eveniet in, asperiores suscipit consequuntur Lorem ipsum dolor sit amet consectetur
-                        <br> adipisicing elit. Doloremque, mollitia temporibus modi <br> cumque enim culpa numquam
-                        voluptate consectetur placeat veritatis!
-                    </h5> <br>
-                    <p>Email : info@gmail.com</p> <br>
-                    <p>Phone : 01500 00 00 00</p> <br>
-                    <div style="display: flex; align-items: center;">
-                        <img style="margin: 12px;" src="/images/icons/youtube.png" alt="">
-                        <img style="margin: 12px;" src="/images/icons/twitter.png" alt="">
-                        <img style="margin: 12px;" src="/images/icons/fb.png" alt="">
-                    </div>
-                </div>
-            </div>
+        -------------------------- -->
 
-            <div>
-                <h1 style="color: wheat; font-weight: 600;">Subscribe</h1>
-                <input placeholder="Enter your email" type="text" name="text" id="text" style="margin: 22px 0px;padding: 10px 22px; border-radius: 5px; border: none;" >  <br>
-                <button id="footer-btn">
-                    Contact Us
-                </button>
+    <footer
+      class="footer-conatainer"
+      style="background-color: black; height: 400px"
+    >
+      <div class="footer-mainDev">
+        <div>
+          <div style="color: wheat">
+            <h1>Future</h1>
+            <h5>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Similique nesciunt rem placeat <br />
+              dolor quod a eveniet in, asperiores suscipit consequuntur Lorem
+              ipsum dolor sit amet consectetur
+              <br />
+              adipisicing elit. Doloremque, mollitia temporibus modi <br />
+              cumque enim culpa numquam voluptate consectetur placeat veritatis!
+            </h5>
+
+            <p style="margin: 4px 0px">Email : info@gmail.com</p>
+
+            <p>Phone : 01500 00 00 00</p>
+
+            <div class="social-link">
+              <img src="images/icons/twitter.png" alt="" />
+              <img src="images/icons/fb.png" alt="" />
+              <img src="images/icons/youtube.png" alt="" />
             </div>
+          </div>
         </div>
-    </Footer>
-    <!----------------------
+
+        <div>
+          <h1 style="color: wheat; font-weight: 600">Subscribe</h1>
+          <input
+            placeholder="Enter your email"
+            type="text"
+            name="text"
+            id="text"
+            style="
+              margin: 22px 0px;
+              padding: 10px 22px;
+              border-radius: 5px;
+              border: none;
+            "
+          />
+          <br />
+          <button id="footer-btn">Contact Us</button>
+        </div>
+      </div>
+    </footer>
+    <!-- --------------------
          Footer-End 
-        ---------------------------->
-
-</body>
-
+        -------------------------- -->
+  </body>
 </html>
